layout bugfixes

--- a/dark.css
+++ b/dark.css
@@ -55,13 +55,13 @@ aside {
     grid-template-areas: "line rule hint";
 }
 .row:nth-child(even) > .line {
-    background-color: #2a2a2a;
+    background-color: #2a2a2a !important;
 }
 
 .line
 {   
     grid-area: line;
-    position: relative; 
+    /*position: relative; */
     width: 100%;
     /*overflow: hidden;*/
     margin : 0px;
@@ -183,7 +183,7 @@ aside {
     cursor: pointer;
     position: absolute;
     text-shadow: none;
-    z-index: 999;
+    z-index: 0;
     background-color: rgb(46, 46, 46);
     border-color: #af9242;
     color: #ffe81fd1;
@@ -205,6 +205,7 @@ aside {
     animation-duration: .5s;
     animation-delay: 1s;
     animation-fill-mode: forwards;
+    z-index: 999;
 }
 
 .tooltip {
